# University

Second-TermPaper-2/: CMakeLists.txt  main.cpp
Second-TermPaper-2/Classes/: Flower.cpp  Flower.h  Plant.cpp  Plant.h  PlantHandler.cpp  PlantHandler.h  Tree.cpp  Tree.h  inputHandle.h
Second-TermpPaper-1/: CMakeLists.txt  main.cpp
Second-TermpPaper-1/Classes/: Client.cpp  Client.h  Hotel.cpp  Hotel.h  inputHandle.h
TermPaper-1-14.11/: CMakeLists.txt  main.cpp
TermPaper-2-1-23.11/: CMakeLists.txt  main.cpp  scheme (1).drawio  scheme.drawio
TermPaper-2-14.11/: CMakeLists.txt  main.cpp  term-paper-2.drawio
TermPaper-2-2-23.11/: CMakeLists.txt  main.cpp  scheme.drawio  schme.html
TermPaper-2-2-23.11/schme_files/: c7fa7451-6f95-4815-ac32-b8cc2537837a
test/: main.cpp
